[workspace]
members = ["v3-pool"]

[package]
name = "dlv-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
v3-pool = { path = "v3-pool" }
parquet = { version = "55", default-features = false, features = ["snap", "arrow"] }
arrow = { version = "55", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
